# living-docs-skill

./: .dockerignore  .gitignore  ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Dockerfile.lint  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  env.example  install.sh  package.json  playwright.config.ts
.cursor/rules/: living-docs.mdc
.github/instructions/: living-docs.instructions.md
.github/workflows/: ci.yml  release.yml
.research-runs/2026-07-20-ontology-codegraph-bridge/: raw-angle-code-kg.md  raw-angle-ontology-bridge.md  raw-angle-rdf-vs-pg.md  raw-angle-rust-rdf.md  raw-angle-skos-vs-owl.md  raw-angle-wiki.md  run_manifest.json  sources.jsonl
cli/: Cargo.toml
cli/src/: main.rs  skill.rs
cli/src/check/: graph.rs  links.rs
cli/tests/: brief.rs  check_core.rs  check_links.rs  check_mermaid.rs  check_size.rs  cli.rs  db_authoring.rs  fmt.rs  index_supersede.rs  new.rs  search.rs  skill.rs
db-store/: Cargo.toml
db-store/src/: entity.rs  lib.rs  migration.rs  record.rs  search.rs  serialize.rs  sync.rs
db-store/tests/: authoring.rs  check_parity.rs  cross_project.rs  dual_engine.rs  ingestion.rs  parity.rs  schema.rs
docs/: constitution.md  index.md
docs/adr/: 0001-living-docs-cli.md  0002-hexagonal-core-workspace.md  0003-storage-backend-model.md  0004-db-engine-and-data-layer.md  0005-normalized-schema.md  0006-web-read-only-axum.md  0007-db-mode-authoring-data-model-and-lossless-export-contract.md  0008-bdr-contract-section.md  0009-document-visibility-model.md  0010-public-export-is-a-deterministic-allowlist-build-with-a-leak-gate-publish-is-a-human-gated-procedure.md  0011-leak-detection-stays-deterministic-curated-ruleset-plus-shannon-entropy-never-ml.md  0012-worldwide-pii-detection-is-checksum-tiered-two-stage-and-deterministic.md  0013-mermaid-validation-runs-in-process-via-merman-core-not-a-docker-mermaid-cli-shell-out.md  0014-the-cli-serves-skill-content-from-an-embedded-corpus-harness-skill-md-files-are-slim-stubs.md  0015-web-ux-follows-the-three-pane-doc-site-archetype-with-search-first-cmd-k-palette.md  0016-atlas-makes-the-web-a-db-mode-authoring-front-superseding-web-read-only.md  0017-skill-md-stubs-are-pure-routers-the-spine-and-all-detail-move-to-cli-topics.md  0018-atlas-delete-is-a-soft-delete-scoped-to-non-decision-doc-types-refused-on-inbound-relations.md  0019-hand-written-record-frontmatter-is-blocked-at-write-time-detected-by-check-and-taught-at-point-of-use.md  index.md  (+1 more)
docs/bdr/: index.md
docs/issues/: index.md  (+14 more)
enforcement/: README.md  pre-commit.sh
examples/: README.md
fs-store/: Cargo.toml
living-docs-core/: Cargo.toml
living-docs-core/src/: frontmatter.rs  lib.rs  paths.rs  record.rs  store.rs  templates.rs  test_support.rs
living-docs-core/src/check/: canonical.rs  graph.rs  links.rs  mermaid.rs  mod.rs  records.rs  size.rs
living-docs-core/src/commands/: brief.rs  export.rs  fmt.rs  index.rs  leak_gate.rs  mod.rs  new.rs  next.rs  status.rs  supersede.rs
living-docs-core/src/pii/: apac.rs  brazil.rs  checksum.rs  contextual.rs  europe.rs  financial.rs  mod.rs  tier3.rs
references/: prior-art-landscape.md
scripts/: check-version.sh
web/: Cargo.toml
web/src/: lib.rs  main.rs  palette.js  style.css  views.rs
web/tests/: http.rs
(+161 files in other folders)
