[package]
name = "living-docs"
version = "0.1.0"
edition = "2021"
description = "Deterministic layer of Living Docs authoring (ADR 0001)."

[[bin]]
name = "living-docs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = { version = "=0.13.4", default-features = false }
