[package]
name = "living-docs"
version = "0.1.0"
edition = "2021"
description = "Deterministic layer of Living Docs authoring (ADR 0001)."

[[bin]]
name = "living-docs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fs-store = { path = "../fs-store" }
living-docs-core = { path = "../living-docs-core" }
