[package]
name = "living-docs"
version = "0.1.0"
edition = "2021"
description = "Deterministic layer of Living Docs authoring (ADR 0001)."

[[bin]]
name = "living-docs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
db-store = { path = "../db-store" }
fs-store = { path = "../fs-store" }
living-docs-core = { path = "../living-docs-core" }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
